2-3강 div, h1, p 랑 span 태그 만들기, 이미지 웹 루트에서 불러오기, inpufile 만들기

--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -9,7 +9,7 @@ Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 <div>
-    <h2></h2>
+    <h2> 2-1. cs 파일안에서 네임 스페이스 변수 메소드 만들기, cshtml 페이지 생성, 레이저 페이지 하나 생성</h2>
     <button @onclick="CallText">razor에서 @@code에 작성된 함수 불러오기</button>
 </div>
 <div>
