2-5. 인덱스 페이지 안에있는 기본 코드들을 수정해 보는 것, 페이지를 만들고 라우팅을 다르게 하여 수동으로 페이지 불러오기, app 페이지 수정   1) 페이지 찾을 수 없을 때 출력하는 '페이지를 찾을 수 없습니다.' 페이지 내용 수정하기

--- a/BlazorApp1/App.razor
+++ b/BlazorApp1/App.razor
@@ -6,7 +6,8 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+          @*페이지 찾을 수 없는 경우 에러 메시지 출력하는 부분*@
+            <p role="alert">사용자정의: 해당 페이지를 찾을 수 없습니다.</p>
         </LayoutView>
     </NotFound>
 </Router>
