2-7-1. 블레이저에서 부트스트랩을 문제 없이 삭제하기   1. MainLyout     1) MainLyout.razor 에서 sidebar를 지운다.     2) MainLyout.razor.css 에 작성된 코드를 지운다.   2. NavMenu     1) NavMenu.razor에서 html을 전부 지운다.     2) @code{} 안에 작성된 코드를 지운다.     3) NavMenu.razor.css 에 작성된 코드를 지운다.   3. _Layout.cshtml     1) 아래 코드를 삭제한다.      <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />

--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -3,6 +3,16 @@
 <PageTitle>BlazorApp1</PageTitle>
 
 <div class="page">
+    @*2-7. 블레이저에서 부트스트랩을 문제 없이 삭제하기
+      1. 아래의 sidebar 태그를 통째로 지운다.
+    <div class="sidebar">
+      <NavMenu />
+    </div>
+
+    2. @code{} 안에 작성 된 것 싹 다 삭제함.
+
+    3. MainLayout.razor.css 파일에 작성된 코드를 전부 삭제함.
+    *@
     <div class="sidebar">
         <NavMenu />
     </div>
