--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -1,4 +1,12 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@*2-7. 블레이저에서 부트스트랩을 문제 없이 삭제하기
+  1. 아래의 html 코드 싹 다 삭제
+
+  2. @code{} 안에 작성 된 것 싹 다 삭제함.
+  
+  3. NaveMenu.razor.css 파일에 작성된 코드를 전부 삭제함.
+*@
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">BlazorApp1</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
