--- a/BlazorApp1/Pages/_Layout.cshtml
+++ b/BlazorApp1/Pages/_Layout.cshtml
@@ -8,14 +8,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
+
+
+    @*부트스트랩 연결하는 코드*@
+    @*안 쓸 거면 이것만 지운다.*@
+    @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />*@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+
     <link href="css/site.css" rel="stylesheet" />
     <link href="BlazorApp1.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
     @RenderBody()
-
+    @*에러 발생 시 출력되는 팝업창이므로 어지간해선 지우지 않는다.*@
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
             An error has occurred. This application may no longer respond until reloaded.
