--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -32,6 +32,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        @*2-7-2. 네브 메뉴에 링크 하나 더 추가하기*@
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="NewPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> NewPage
+            </NavLink>
+        </div>
     </nav>
 </div>
 
