2-9. onparameterset 부터 시작해서 afterrenderasync 까지의 순서를 로그를 통해 확인해보기, 퍼스트 렌더 안에서 작동하는 구조를 설명 //override 함수들 호출 순서 확인 public override Task SetParametersAsync(ParameterView parameters) protected override void OnInitialized() protected override void OnParametersSet() protected override void OnAfterRender(bool firstRender)

--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
             <NavLink class="nav-link" href="NewPage">
                 <span class="oi oi-plus" aria-hidden="true"></span> NewPage
             </NavLink>
+        </div>        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="OverrideMethods">
+                <span class="oi oi-plus" aria-hidden="true"></span> override 메서드 출력
+            </NavLink>
         </div>
     </nav>
 </div>
