# 2-10. csharp 폴더 안에 파일을 만들고 변수와 함수를 생성, 레이저 페이지에 클래스 형과 인젝트 형으로 가져오기 1번-using으로 만든 클래스: TestClass1 2번-using네임스페이스 + inject로 만든 클래스: TestClass2

--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -43,6 +43,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> override 메서드 출력
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="CSharpClassUsingPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> 외부 C#파일 클래스 사용 방법
+            </NavLink>
+        </div>
     </nav>
 </div>
 
