--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -48,6 +48,21 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> 외부 C#파일 클래스 사용 방법
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Section2Component">
+                <span class="oi oi-collapse-left" aria-hidden="true"></span> Section2 1 ~ 6
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ProducTable">
+                <span class="oi oi-collapse-left" aria-hidden="true"></span> ProducTable
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="FormInput">
+                <span class="iconify" data-icon="bi:activity"></span> FormInput
+            </NavLink>
+        </div>
     </nav>
 </div>
 
