--- a/BlazorApp1/Pages/_Host.cshtml
+++ b/BlazorApp1/Pages/_Host.cshtml
@@ -5,4 +5,13 @@
     Layout = "_Layout";
 }
 
+
 <component type="typeof(App)" render-mode="ServerPrerendered" />
+
+@*
+    Layout == _Layout.cshtml을 의미한다.
+    Layout에 담긴 html 태그는 모든 페이지에 공통적으로 적용된다.
+
+
+
+*@
