--- a/BlazorApp1/_Imports.razor
+++ b/BlazorApp1/_Imports.razor
@@ -11,3 +11,6 @@
 @using BlazorApp1.Shared.Commons
 @using BlazorApp1.Pages.Section2
 @using BlazorApp1.Pages.Section3
+
+@using BlazorApp1.Data.Models
+@using BlazorApp1.Controller
