--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@*LayoutComponentBase: 하단 코드처럼 구성하겠다고 선언한 형태*@
 
 <PageTitle>BlazorApp1</PageTitle>
 
@@ -13,15 +14,18 @@
 
     3. MainLayout.razor.css 파일에 작성된 코드를 전부 삭제함.
     *@
+    @*보라색의 사이드바*@
     <div class="sidebar">
         <NavMenu />
     </div>
 
     <main>
+        @*상단의 약간 회색의 헤더(제일 위쪽) 부분*@
         <div class="top-row px-4">
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
+        @*주소에서 요청된 값에 따라 Pages -> .razor 페이지를 출력*@
         <article class="content px-4">
             @Body
         </article>
